--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -221,8 +221,8 @@ The total, unstratified density of wildings in our data set was 28/ha for Sitka/
 Observed wildlings densities in different ecosystem types --- excluding ecosystem types covering less than 1 ha --- ranged 1-60/ha for Sitka spruce, 0-49/ha for Norway spruce, 0-52/ha for larch, and 0-219/ha for lodgepole pine.
 The "open active landslide" type exceeded these densities around Sitka/Lutz spruce and larch plantations, but was very rare.
 
-Modeled establishment probabilities among ecosystem types tallying at least one wildling and covering at least 1 ha varied by up to five orders of magnitude (fig. \@ref(fig:relative-establishment)).
-Wildling densities calculated directly from the data revealed less variation in establishment probability between ecosystem types --- they were closer to the overall mean --- than the corresponding modeled estimates.
+For all species, modeled establishment probabilities varied more than the corresponding wildling densities calculated directly from the data (fig. \@ref(fig:relative-establishment)).
+Modeled establishment probabilities among ecosystem types tallying at least one wildling and covering at least 1 ha varied by up to five orders of magnitude.
 Within species, confidence intervals on modeled establishment probabilities in pairs of ecosystem types frequently overlapped.
 Nevertheless, establishment probability in many other ecosystem types could be distinguished with a high degree of confidence.
 For example, it is not clear whether the establishment probability of lodgepole pine was higher in the "coastal heath" or "bare rock" types, but it was clearly much higher in both of these than in "forest".
@@ -232,8 +232,8 @@ Establishment probabilities varied strongly among Sitka/Lutz spruce localities, 
 For example, the model predicted that "arable fields" at the locality with the highest overall establishment probability and "boreal heath" at the locality with the lowest overall establishment probability would be colonized at roughly equal rates, even though "boreal heath" is colonized more than 100 times faster on average.
 For the other species, especially for Norway spruce and lodgepole pine, there was much less variation in establishment probabilities among localities. 
 
-```{r relative-establishment, fig.cap="Relative establishment probabilities among ecosystem types, using 'forest' as the reference level, for four alien conifer species groups. Unfilled points show scaled wildling densities calculated directly from the data. In the case of zero wildlings, these points are placed at the lower limit of the x-axis. Filled points with line intervals show modeled estimates surrounded by their 95 % confidence intervals. Grey point clouds show modeled estimates for individual localities. Ecosystem types are ordered by a confidence-weighted mean of their percentile-ranked establishment probabilities within species, such that types with consistently high establishment probability across species are at the top of the y-axis. Ecosystem types shown in italic font are wetlands, and ecosystem types shown in bold font are characterized by disturbance. Ecosystem types without wildlings and covering less than 0.5 ha across all localities for that species are not displayed. Photos licensed CC BY 4.0 Rune Halvorsen."}
-knitr::include_graphics(here('ms', 'figures', 'relative-establishment', 'relative-establishment.pdf'))
+```{r relative-establishment, fig.cap="Relative establishment probabilities among ecosystem types, using 'forest' as the reference level, for four alien conifer species groups. Unfilled points show scaled wildling densities calculated directly from the data. In the case of zero wildlings, these points are placed at the lower limit of the x-axis. Filled points with line intervals show modeled estimates surrounded by their 95 % confidence intervals. Grey point clouds show modeled estimates for individual localities. Ecosystem types are ordered by a confidence-weighted mean of their percentile-ranked establishment probabilities within species, such that types with consistently high establishment probability across species are at the top of the y-axis. Ecosystem types shown in italic font are wetlands, and ecosystem types shown in bold font are structured by disturbance. Ecosystem types without wildlings and covering less than 0.5 ha across all localities for that species are not displayed. Photos licensed CC BY 4.0 Rune Halvorsen."}
+knitr::include_graphics(here('ms', 'figures', 'relative-establishment', 'relative-establishment.svg'))
 ```
 
 ```{r correlation-table}
@@ -271,7 +271,7 @@ The interaction specified between seed deposition and plantation age was estimat
 
 ## Ecosystem invasibility
 
-1. Compare results to other assessments conifer recruitment in different ecosystems [@richardsonPineInvasionsSouthern1994; @petersonEcologyManagementSitka1997; @despainDispersalEcologyLodgepole2001; @langdonPinusContortaInvasion2010; @fernandesNaturalRegenerationPinus2016; @taylorDriversPlantInvasion2016; @macekLifeDeathPicea2017; @vanettenInvasionPatternsPinus2020] or to plants more broadly [@chytryHabitatInvasionsAlien2008; @calvino-cancelaInvasivePotentialEucalyptus2013].
+1. Compare results to other assessments conifer recruitment in different ecosystems [@richardsonPineInvasionsSouthern1994; @petersonEcologyManagementSitka1997; @despainDispersalEcologyLodgepole2001; @langdonPinusContortaInvasion2010; @fernandesNaturalRegenerationPinus2016; @taylorDriversPlantInvasion2016; @macekLifeDeathPicea2017; @vanettenInvasionPatternsPinus2020] or to plants more broadly [@chytryHabitatInvasionsAlien2008].
 Two obvious management recommendations: 1) for site selection, try to limit plantations to sites where they are surrounded by arable fields. Where it is simultanueosly desireable to alter adjacent nature types (e.g. by grazing), that is also an option. 2) For early detection and rapid response, prioritize monitoring and control interventions in vulnerable ecosystem types like... 5500 km2 mapped for ecosystem types in Norway. Ensuring that plantation surroundings are actively cultivated (e.g. mowed) is an effective way to keep wildlings in check, to the extent that seeds are unlikely to disperse beyond these ecosystem types [@albertLanduseChangeSubalpine2008].
 
 Caution: Beware that Sitka colonization varies enormously from site to site --- much more than other species --- so our ability to predict the magnitude of spread at a specific site is limited. More research is needed to probe this unexplained variance (human action?). But that does not mean we cannot or should not use the estimates to guide management! For example, imagine one locality consists entirely of coastal heath and another entirely of arable field. All things being equal, we expect the coastal heath locality to be colonized more than 100 times faster than the arable field locality. Simultaneusly we should not be surprised if they are colonized at equal rates. 
@@ -307,7 +307,7 @@ Limitation: WALD model of seed deposition fits patterns of *establishment* bette
 Our disturbance results should not be interpreted to mean that an anthropogenic disturbance event decreases establishment probability relative to prior state (e.g. [@vikaneInvasionCallunaHeath2013] shows that burning in coastal heathland increases Sitka spruce establishment), but that alien conifers are not as likely to establish in anthropogenically disturbed ecosystems --- including ecosystems like arable fields --- as a group. An obvious explanation for this pattern is that these kinds of disturbance regimes kill as many or more wildlings than they recruit [@buckleyDisturbanceInvasionReinvasion2007].
 We refer to disturbance-structured ecosystems rather than disturbed ecosystems for the above reason.
 
-Ecosystem types structured by anthropogenic disturbance structuring includes areas in which conifer recruitment is almost certainly impossible, like paved surfaces and plowed fields. These deflate the establishment likelihood of this stratum, masking what might be high establishment probability along roadsides, for example.  
+Ecosystem types structured by anthropogenic disturbance structuring includes areas in which conifer recruitment is almost certainly impossible, like paved surfaces and plowed fields. These deflate the establishment likelihood of this stratum, masking high establishment probability in "boreal heaths" or  "strongly altered ground with semi−natural grassland character", for example.  
 
 In some cases, disturbed ecosystems may also be less favorable to establishment because high germination is outweighed by low survival at older life stages. E.g. Gregory 1956 (in Peterson 1997)
 
