--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -11,6 +11,23 @@
   type = {{{NINA}} Report}
 }
 
+@article{albertLanduseChangeSubalpine2008,
+  title = {Land-Use Change and Subalpine Tree Dynamics: Colonization of {{Larix}} Decidua in {{French}} Subalpine Grasslands},
+  shorttitle = {Land-Use Change and Subalpine Tree Dynamics},
+  author = {Albert, C{\'e}cile H. and Thuiller, Wilfried and Lavorel, Sandra and Davies, Ian D. and Garbolino, Emmanuel},
+  year = {2008},
+  volume = {45},
+  pages = {659--669},
+  issn = {1365-2664},
+  doi = {10.1111/j.1365-2664.2007.01416.x},
+  copyright = {\textcopyright{} 2007 The Authors. Journal compilation \textcopyright{} 2007 British Ecological Society},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Albert et al_2008_Land-use change and subalpine tree dynamics.pdf},
+  journal = {Journal of Applied Ecology},
+  keywords = {conifer,dispersal,landscape,recruitment,SDM},
+  language = {en},
+  number = {2}
+}
+
 @techreport{appelgrenKartleggingAvKortdistansespredning2017,
   title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r i {{Rogaland}} Og {{Hordaland}}},
   author = {Appelgren, Leif and Torvik, Solbj{\o}rg Engen},
@@ -448,6 +465,21 @@
   number = {9}
 }
 
+@article{despainDispersalEcologyLodgepole2001,
+  title = {Dispersal Ecology of Lodgepole Pine ({{Pinus}} Contorta {{Dougl}}.) in Its Native Environment as Related to {{Swedish}} Forestry},
+  author = {Despain, Don G},
+  year = {2001},
+  month = feb,
+  volume = {141},
+  pages = {59--68},
+  issn = {0378-1127},
+  doi = {10.1016/S0378-1127(00)00489-8},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Despain_2001_Dispersal ecology of lodgepole pine (Pinus contorta Dougl.pdf},
+  journal = {Forest Ecology and Management},
+  language = {en},
+  number = {1}
+}
+
 @article{dovciakSeedRainEnvironmental2008,
   title = {Seed Rain and Environmental Controls on Invasion of {{Picea}} Abies into Grassland},
   author = {Dov{\v c}iak, Martin and Hrivn{\'a}k, Richard and Ujh{\'a}zy, Karol and G{\"o}m{\"o}ry, Du{\v s}an},
@@ -618,6 +650,21 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Halvorsen et al_2015_Natur i Norge.pdf}
 }
 
+@article{halvorsenSystematicsEcodiversityEcoSyst,
+  title = {Towards a Systematics of Ecodiversity: {{The EcoSyst}} Framework},
+  shorttitle = {Towards a Systematics of Ecodiversity},
+  author = {Halvorsen, Rune and Skarpaas, Olav and Bryn, Anders and Bratli, Harald and Erikstad, Lars and Simensen, Trond and Lieungh, Eva},
+  volume = {n/a},
+  issn = {1466-8238},
+  doi = {10.1111/geb.13164},
+  copyright = {\textcopyright{} 2020 The Authors. Global Ecology and Biogeography published by John Wiley \& Sons Ltd},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Halvorsen et al__Towards a systematics of ecodiversity.pdf},
+  journal = {Global Ecology and Biogeography},
+  keywords = {_tablet,biodiversity,systematics,To read},
+  language = {en},
+  number = {n/a}
+}
+
 @incollection{harrisSitkaSpruce1990,
   title = {Sitka Spruce},
   booktitle = {Silvics of {{North America}}: 1. {{Conifers}}},
@@ -638,6 +685,22 @@
   year = {2020},
   keywords = {R package},
   type = {Manual}
+}
+
+@article{hegerPredictingBiologicalInvasions2003,
+  title = {Predicting {{Biological Invasions}}},
+  author = {Heger, Tina and Trepl, Ludwig},
+  year = {2003},
+  month = dec,
+  volume = {5},
+  pages = {313--321},
+  issn = {1573-1464},
+  doi = {10.1023/B:BINV.0000005568.44154.12},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Heger_Trepl_2003_Predicting Biological Invasions.pdf},
+  journal = {Biological Invasions},
+  keywords = {invasion},
+  language = {en},
+  number = {4}
 }
 
 @article{hewittTreeSeedDispersal2002,
@@ -813,6 +876,23 @@
   number = {1427}
 }
 
+@article{langdonPinusContortaInvasion2010,
+  title = {Pinus Contorta Invasion in the {{Chilean Patagonia}}: Local Patterns in a Global Context},
+  shorttitle = {Pinus Contorta Invasion in the {{Chilean Patagonia}}},
+  author = {Langdon, B{\'a}rbara and Pauchard, An{\'i}bal and Aguayo, Mauricio},
+  year = {2010},
+  month = dec,
+  volume = {12},
+  pages = {3961--3971},
+  issn = {1573-1464},
+  doi = {10.1007/s10530-010-9817-5},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Langdon et al_2010_Pinus contorta invasion in the Chilean Patagonia.pdf},
+  journal = {Biological Invasions},
+  keywords = {conifer,invasion},
+  language = {en},
+  number = {12}
+}
+
 @article{laviInvasionPinusHalepensis2005,
   title = {Invasion of {{Pinus}} Halepensis from Plantations into Adjacent Natural Habitats},
   author = {Lavi, Ayala and Perevolotsky, Avi and Kigel, Jaime and Noy-Meir, Imanuel},
@@ -843,6 +923,23 @@
   keywords = {dispersal,disturbance,invasibility,invasion},
   language = {en},
   number = {5}
+}
+
+@article{macekLifeDeathPicea2017,
+  title = {Life and Death of {{Picea}} Abies after Bark-Beetle Outbreak: Ecological Processes Driving Seedling Recruitment},
+  shorttitle = {Life and Death of {{Picea}} Abies after Bark-Beetle Outbreak},
+  author = {Macek, Martin and Wild, Jan and Kopeck{\'y}, Martin and {\v C}ervenka, Jaroslav and Svoboda, Miroslav and Zen{\'a}hl{\'i}kov{\'a}, Jitka and Br{\r{u}}na, Josef and Mosandl, Reinhard and Fischer, Anton},
+  year = {2017},
+  volume = {27},
+  pages = {156--167},
+  issn = {1939-5582},
+  doi = {10.1002/eap.1429},
+  copyright = {\textcopyright{} 2016 by the Ecological Society of America},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Macek et al_2017_Life and death of Picea abies after bark-beetle outbreak.pdf},
+  journal = {Ecological Applications},
+  keywords = {conifer,disturbance,forest,germination,recruitment,survival},
+  language = {en},
+  number = {1}
 }
 
 @article{mcconnachieEstimatingEffectPlantations2015,
@@ -1231,6 +1328,23 @@
   howpublished = {https://www.fs.fed.us/database/feis/plants/tree/picabi/all.html},
   journal = {Fire Effects Information System, U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station,  Fire Sciences Laboratory},
   keywords = {dispersal}
+}
+
+@article{taylorDriversPlantInvasion2016,
+  title = {Drivers of Plant Invasion Vary Globally: Evidence from Pine Invasions within Six Ecoregions},
+  shorttitle = {Drivers of Plant Invasion Vary Globally},
+  author = {Taylor, Kimberley T. and Maxwell, Bruce D. and Pauchard, An{\'i}bal and Nu{\~n}ez, Martin A. and Peltzer, Duane A. and Terwei, Andr{\'e} and Rew, Lisa J.},
+  year = {2016},
+  volume = {25},
+  pages = {96--106},
+  issn = {1466-8238},
+  doi = {10.1111/geb.12391},
+  copyright = {\textcopyright{} 2015 John Wiley \& Sons Ltd},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Taylor et al_2016_Drivers of plant invasion vary globally.pdf},
+  journal = {Global Ecology and Biogeography},
+  keywords = {conifer,invasion,propagule pressure},
+  language = {en},
+  number = {1}
 }
 
 @article{textorRobustCausalInference2016,
